Bug #52453: fix category button line wrap

--- a/management/univention-web/css/site/overview.styl
+++ b/management/univention-web/css/site/overview.styl
@@ -1,12 +1,14 @@
-@require "../variables"
+@require "../variables.styl"
 
 .umc .umcOverviewContainer
 	padding: 4rem 0 0
 
 /* Category tabs */
 .umc .umcCategoryBar
-	text-align: center
-	margin-bottom: material-grid(4)
+	margin-bottom: spacing(3)
+	display: flex
+	flex-wrap: wrap
+	justify-content: center
 
 .umcCategoryButton
 	--button-size: auto
